@@ -12,7 +12,7 @@ import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static com.github.chengyuxing.plugin.rabbit.sql.common.Constants.SQL_NAME_PATTERN;
@@ -42,7 +42,7 @@ public class XqlQuickDoc extends AbstractDocumentationProvider {
             var resource = ResourceCache.getInstance().getResource(originalElement);
             if (resource != null && resource.getXqlFileManager().contains(sqlName)) {
                 var xqlFileManager = resource.getXqlFileManager();
-                var sqlTranslator = xqlFileManager.getSqlTranslator();
+                var sqlGenerator = xqlFileManager.getSqlGenerator();
                 String sqlDefinition = xqlFileManager.get(sqlName);
                 String sqlContent = HtmlUtil.toHighlightSqlHtml(sqlDefinition);
                 String xqlFile = element.getContainingFile().getName();
@@ -51,7 +51,7 @@ public class XqlQuickDoc extends AbstractDocumentationProvider {
                         CONTENT_START + sqlContent + CONTENT_END +
                         SECTIONS_START;
 
-                var prepareParams = sqlTranslator.getPreparedSql(sqlDefinition, Collections.emptyMap())
+                var prepareParams = sqlGenerator.getPreparedSql(sqlDefinition, Map.of())
                         .getItem2()
                         .stream()
                         .map(name -> xqlFileManager.getNamedParamPrefix() + name)
@@ -63,7 +63,7 @@ public class XqlQuickDoc extends AbstractDocumentationProvider {
                     doc += SECTION_HEADER_START + "Prepare parameters: " + SECTION_SEPARATOR + "<p>" + prepareParams + SECTION_END;
                 }
 
-                var tempParams = StringUtil.getTemplateParameters(sqlTranslator, sqlDefinition);
+                var tempParams = StringUtil.getTemplateParameters(sqlGenerator, sqlDefinition);
                 if (!tempParams.isEmpty()) {
                     doc += SECTION_HEADER_START + "Template parameters: " + SECTION_SEPARATOR + "<p>" + String.join("  ", tempParams) + SECTION_END;
                 }
